Correct background alignment

--- a/styles.css
+++ b/styles.css
@@ -6,15 +6,19 @@ frosted white - rgba(225, 225, 225, .9);
 grey - #95a5a6;
 red - #ee5253 */
 
-body {
+.background {
   background-image: url("./assets/burger-friends.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  width: 100%;
+  height: 100%;
+}
+
+body {
   height: 100vh;
   width: 100vw;
   overflow-y: hidden;
-  /* max-width: 100%; */
 }
 
 span{
